# lawn-ai

./: .gitignore  PROJECT_STATUS.md  README.md  generate_combined_report.py  main.py  processed.json  requirements.txt
MCP/: .env.example  .gitignore  README.md  SECURITY_CONCEPTS.md  pyproject.toml  requirements.txt  server.py  setup.sh
analysis/: forecasting.py  trend_model.py
archive/: forecast_readable_archived.json  historical_data_archived.json
data/: processed.json
data/receipts/: receipts.txt
ingestion/: parser.py  pdf_loader.py
models/: embeddings.py
output/: forecast.json  forecast_and_shopping_guide.html  historical_data.csv  mcp_search_results.json
