[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "lawn-ai-mcp"
version = "0.1.0"
description = "MCP server for lawn care product discovery and shopping list generation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.6.0",
    "pydantic>=2.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.poetry]
name = "lawn-ai-mcp"
version = "0.1.0"
description = "MCP server for lawn care product discovery"
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^0.6.0"
pydantic = "^2.0"
httpx = "^0.24.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"
